update i18n zh-cn

--- a/luci-app-mihomo/po/zh_Hans/mihomo.po
+++ b/luci-app-mihomo/po/zh_Hans/mihomo.po
@@ -79,6 +79,15 @@ msgstr "访问控制"
 msgid "Mode"
 msgstr "模式"
 
+msgid "Block Mode"
+msgstr "黑名单模式"
+
+msgid "Allow Mode"
+msgstr "白名单模式"
+
+msgid "Mode"
+msgstr "模式"
+
 msgid "IP"
 msgstr "IP"
 
