--- a/luci-app-mihomo/po/zh_Hans/mihomo.po
+++ b/luci-app-mihomo/po/zh_Hans/mihomo.po
@@ -16,14 +16,53 @@ msgstr "定时重启"
 msgid "Cron Expression"
 msgstr "Cron 表达式"
 
-msgid "Profile"
-msgstr "配置文件"
+msgid "Choose Profile"
+msgstr "选择配置文件"
 
 msgid "File:"
 msgstr "文件："
 
 msgid "Subscription:"
 msgstr "订阅："
+
+msgid "Upload Profile"
+msgstr "上传配置文件"
+
+msgid "Proxy Config"
+msgstr "代理配置"
+
+msgid "Transparent Proxy"
+msgstr "透明代理"
+
+msgid "Router Proxy"
+msgstr "路由器代理"
+
+msgid "Access Control Mode"
+msgstr "访问控制模式"
+
+msgid "Block Mode"
+msgstr "黑名单模式"
+
+msgid "Allow Mode"
+msgstr "白名单模式"
+
+msgid "Access Control IP"
+msgstr "访问控制 IP"
+
+msgid "Access Control MAC"
+msgstr "访问控制 MAC"
+
+msgid "Subscription Config"
+msgstr "订阅配置"
+
+msgid "Subscription Name"
+msgstr "订阅名称"
+
+msgid "Subscription Url"
+msgstr "订阅链接"
+
+msgid "Mixin Config"
+msgstr "混入配置"
 
 msgid "Proxy Mode"
 msgstr "代理模式"
@@ -69,36 +108,3 @@ msgstr "Redir-Host"
 
 msgid "Fake-IP Range"
 msgstr "Fake-IP 范围"
-
-msgid "Subscription Config"
-msgstr "订阅配置"
-
-msgid "Subscription Name"
-msgstr "订阅名称"
-
-msgid "Subscription Url"
-msgstr "订阅链接"
-
-msgid "Proxy Config"
-msgstr "代理配置"
-
-msgid "Transparent Proxy"
-msgstr "透明代理"
-
-msgid "Router Proxy"
-msgstr "路由器代理"
-
-msgid "Access Control Mode"
-msgstr "访问控制模式"
-
-msgid "Block Mode"
-msgstr "黑名单模式"
-
-msgid "Allow Mode"
-msgstr "白名单模式"
-
-msgid "Access Control IP"
-msgstr "访问控制 IP"
-
-msgid "Access Control MAC"
-msgstr "访问控制 MAC"
