adjust dashboard button name

--- a/luci-app-mihomo/po/zh_Hans/mihomo.po
+++ b/luci-app-mihomo/po/zh_Hans/mihomo.po
@@ -91,6 +91,9 @@ msgstr "TCP并发"
 msgid "External Control Config"
 msgstr "外部控制配置"
 
+msgid "Open"
+msgstr "打开"
+
 msgid "Use Razord"
 msgstr "使用 Razord 面板"
 
