1. add luci mixin config 2. refacor the logic of yq eval

--- a/luci-app-mihomo/po/zh_Hans/mihomo.po
+++ b/luci-app-mihomo/po/zh_Hans/mihomo.po
@@ -88,6 +88,9 @@ msgstr "统一延迟"
 msgid "TCP Concurrent"
 msgstr "TCP并发"
 
+msgid "TCP Keep Alive Interval"
+msgstr "TCP Keep Alive 间隔"
+
 msgid "External Control Config"
 msgstr "外部控制配置"
 
@@ -160,8 +163,74 @@ msgstr "Redir-Host"
 msgid "Fake-IP Range"
 msgstr "Fake-IP 范围"
 
+msgid "Fake-IP Filter"
+msgstr "Fake-IP 过滤列表"
+
 msgid "Fake-IP Cache"
 msgstr "Fake-IP 缓存"
+
+msgid "Use Hosts"
+msgstr "使用 Hosts"
+
+msgid "Edit Hosts"
+msgstr "编辑 Hosts"
+
+msgid "Use System Hosts"
+msgstr "使用系统的 Hosts"
+
+msgid "Overwrite Nameserver"
+msgstr "覆盖 DNS 服务器"
+
+msgid "Edit Nameservers"
+msgstr "编辑 DNS 服务器"
+
+msgid "Type"
+msgstr "类型"
+
+msgid "Nameserver"
+msgstr "DNS 服务器"
+
+msgid "Overwrite Fallback Filter"
+msgstr "覆盖 Fallback 过滤列表"
+
+msgid "Fallback GeoIP Filter"
+msgstr "Fallback GeoIP 过滤列表"
+
+msgid "Fallback GeoSite Filter"
+msgstr "Fallback GeoSite 过滤列表"
+
+msgid "Fallback IPCIDR Filter"
+msgstr "Fallback IPCIDR 过滤列表"
+
+msgid "Fallback Domain Name Filter"
+msgstr "Fallback Domain Name 过滤列表"
+
+msgid "Overwrite Nameserver Policy"
+msgstr "覆盖 DNS 服务器查询策略"
+
+msgid "Edit Nameserver Policies"
+msgstr "编辑 DNS 服务器查询策略"
+
+msgid "Matcher"
+msgstr "匹配"
+
+msgid "Sniffer Config"
+msgstr "嗅探器配置"
+
+msgid "Sniff Redir-Host"
+msgstr "嗅探 Redir-Host 流量"
+
+msgid "Sniff Pure IP"
+msgstr "嗅探纯IP连接"
+
+msgid "Overwrite Destination"
+msgstr "将嗅探结果作为连接的目标"
+
+msgid "Force Sniff Domain"
+msgstr "强制嗅探的域名"
+
+msgid "Ignore Sniff Domain"
+msgstr "忽略嗅探的域名"
 
 msgid "GeoX Config"
 msgstr "GeoX 配置"
