--- a/luci-app-mihomo/po/zh_Hans/mihomo.po
+++ b/luci-app-mihomo/po/zh_Hans/mihomo.po
@@ -1,3 +1,17 @@
+msgid ""
+msgstr ""
+"POT-Creation-Date: 2024-05-13 11:07+0800\n"
+"PO-Revision-Date: 2024-05-30 17:17+0800\n"
+"Last-Translator: morytyann <morytyann@gmail.com>\n"
+"Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/"
+"openwrt/luciapplicationsmihomo/zh_Hans/>\n"
+"Language: zh_Hans\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Weblate 5.5-dev\n"
+
 msgid "mihomo"
 msgstr "mihomo"
 
