rearrange proxy options

--- a/luci-app-mihomo/po/zh_Hans/mihomo.po
+++ b/luci-app-mihomo/po/zh_Hans/mihomo.po
@@ -31,6 +31,21 @@ msgstr "未在运行"
 msgid "Enable"
 msgstr "启用"
 
+msgid "Disable"
+msgstr "禁用"
+
+msgid "Auto"
+msgstr "自动"
+
+msgid "Mode"
+msgstr "模式"
+
+msgid "Type"
+msgstr "类型"
+
+msgid "Value"
+msgstr "值"
+
 msgid "Scheduled Restart"
 msgstr "定时重启"
 
@@ -61,9 +76,6 @@ msgstr "代理配置"
 msgid "Transparent Proxy"
 msgstr "透明代理"
 
-msgid "Transparent Proxy Mode"
-msgstr "透明代理模式"
-
 msgid "TPROXY Mode"
 msgstr "TPROXY 模式"
 
@@ -79,8 +91,11 @@ msgstr "IPv6 代理"
 msgid "Router Proxy"
 msgstr "路由器代理"
 
-msgid "Access Control Mode"
-msgstr "访问控制模式"
+msgid "DNS Hijack"
+msgstr "DNS 劫持"
+
+msgid "Access Control"
+msgstr "访问控制"
 
 msgid "All Mode"
 msgstr "全部模式"
@@ -94,17 +109,8 @@ msgstr "黑名单模式"
 msgid "Forbid Mode"
 msgstr "禁止模式"
 
-msgid "Access Control IP"
-msgstr "访问控制 IP"
-
-msgid "Access Control IP6"
-msgstr "访问控制 IP6"
-
-msgid "Access Control MAC"
-msgstr "访问控制 MAC"
-
-msgid "DNS Hijack"
-msgstr "DNS 劫持"
+msgid "Bypass"
+msgstr "绕过"
 
 msgid "Bypass China Mainland IP"
 msgstr "绕过中国大陆 IP"
@@ -156,12 +162,6 @@ msgstr "直连模式"
 
 msgid "Match Process"
 msgstr "匹配进程"
-
-msgid "Auto"
-msgstr "自动"
-
-msgid "Disable"
-msgstr "禁用"
 
 msgid "Outbound Interface"
 msgstr "出站接口"
@@ -307,9 +307,6 @@ msgstr "覆盖 DNS 服务器"
 msgid "Edit Nameservers"
 msgstr "编辑 DNS 服务器"
 
-msgid "Type"
-msgstr "类型"
-
 msgid "Nameserver"
 msgstr "DNS 服务器"
 
@@ -318,9 +315,6 @@ msgstr "覆盖 Fallback 过滤列表"
 
 msgid "Edit Fallback Filters"
 msgstr "编辑 Fallback 过滤列表"
-
-msgid "Value"
-msgstr "值"
 
 msgid "Overwrite Nameserver Policy"
 msgstr "覆盖 DNS 服务器查询策略"
