--- a/luci-app-mihomo/po/zh_Hans/mihomo.po
+++ b/luci-app-mihomo/po/zh_Hans/mihomo.po
@@ -4,11 +4,11 @@ msgstr "Mihomo"
 msgid "Mihomo is a rule based proxy in Go."
 msgstr "Mihomo 是一个Go语言编写的基于规则的代理工具。"
 
+msgid "Usage"
+msgstr "使用说明"
+
 msgid "Config"
 msgstr "配置"
-
-msgid "Basic Config"
-msgstr "基础配置"
 
 msgid "Status"
 msgstr "状态"
@@ -34,8 +34,14 @@ msgstr "重新加载"
 msgid "Restart"
 msgstr "重启"
 
-msgid "Usage"
-msgstr "使用说明"
+msgid "Update Dashboard"
+msgstr "更新面板"
+
+msgid "Open Dashboard"
+msgstr "打开面板"
+
+msgid "Basic Config"
+msgstr "基础配置"
 
 msgid "Enable"
 msgstr "启用"
@@ -220,29 +226,14 @@ msgstr "日志级别"
 msgid "External Control Config"
 msgstr "外部控制配置"
 
-msgid "Use Razord"
-msgstr "使用 Razord 面板"
+msgid "UI Name"
+msgstr "UI 名称"
 
-msgid "Open Razord"
-msgstr "打开 Razord 面板"
-
-msgid "Use YACD"
-msgstr "使用 YACD 面板"
-
-msgid "Open YACD"
-msgstr "打开 YACD 面板"
-
-msgid "Use MetaCubeXD"
-msgstr "使用 MetaCubeXD 面板"
-
-msgid "Open MetaCubeXD"
-msgstr "打开 MetaCubeXD 面板"
+msgid "UI Url"
+msgstr "UI 下载地址"
 
 msgid "Service is not running."
 msgstr "服务未在运行。"
-
-msgid "External Control is not configured."
-msgstr "未配置外部控制。"
 
 msgid "API Port"
 msgstr "API 端口"
